--- a/config/instances/manuela-argocd-aggregator/hub/prometheus-route.yaml
+++ b/config/instances/manuela-argocd-aggregator/hub/prometheus-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: prometheus
 spec:
-  host: prometheus-manuela-argocd-aggregator.apps.edge-mgmt-hub.gcp.devcluster.openshift.com
+  host: prometheus-manuela-argocd-aggregator.apps.edge-monkey-hub.gcp.devcluster.openshift.com
   port:
     targetPort: web
   to:
