--- a/config/instances/manuela-stormshift-staging-gcp/line-dashboard/line-dashboard-configmap-config.json
+++ b/config/instances/manuela-stormshift-staging-gcp/line-dashboard/line-dashboard-configmap-config.json
@@ -1,5 +1,5 @@
 {
-    "websocketHost": "http://messaging-manuela-stormshift-messaging.apps.staging-edge.gcp.devcluster.openshift.com",
+    "websocketHost": "http://messaging-manuela-stormshift-messaging.apps.staging-monkey.gcp.devcluster.openshift.com",
     "websocketPath": "/api/service-web/socket",
     "SERVER_TIMEOUT": 20000
 }
