--- a/config/instances/manuela-tst/line-dashboard-configmap-config.json
+++ b/config/instances/manuela-tst/line-dashboard-configmap-config.json
@@ -1,5 +1,5 @@
 {
-    "websocketHost": "http://messaging-manuela-tst-all.apps.edge-mgmt-hub.gcp.devcluster.openshift.com",
+    "websocketHost": "http://messaging-manuela-tst-all.apps.edge-monkey-hub.gcp.devcluster.openshift.com",
     "websocketPath": "/api/service-web/socket",
     "SERVER_TIMEOUT": 20000
 }
