--- a/config/instances/manuela-tst/messaging-route.yaml
+++ b/config/instances/manuela-tst/messaging-route.yaml
@@ -3,4 +3,4 @@ kind: Route
 metadata:
   name: messaging
 spec:
-  host: messaging-manuela-tst-all.apps.edge-mgmt-hub.gcp.devcluster.openshift.com
+  host: messaging-manuela-tst-all.apps.edge-monkey-hub.gcp.devcluster.openshift.com
