--- a/config/instances/manuela-stormshift-staging-gcp/machine-sensor/machine-sensor-2-configmap.properties
+++ b/config/instances/manuela-stormshift-staging-gcp/machine-sensor/machine-sensor-2-configmap.properties
@@ -1,2 +1,3 @@
 MQTT_HOSTNAME=broker-amq-mqtt-all-0-svc-rte-manuela-stormshift-messaging.apps.staging-monkey.gcp.devcluster.openshift.com
 MQTT_PORT=80
+SENSOR_TEMPERATURE_ENABLED=true
