--- a/config/templates/manuela-openshift-prod/line-dashboard/line-dashboard-is.yaml
+++ b/config/templates/manuela-openshift-prod/line-dashboard/line-dashboard-is.yaml
@@ -4,13 +4,6 @@ metadata:
   name: line-dashboard
 spec:
   tags:
-  - name: 0.3.1-49
-    from:
-      kind: DockerImage
-      name: quay.io/manuela/iot-frontend:0.3.1-49
-    importPolicy: {}
-    referencePolicy:
-      type: Local
   - name: 0.3.1-52
     from:
       kind: DockerImage
@@ -50,6 +43,13 @@ spec:
     from:
       kind: DockerImage
       name: quay.io/monkey-the-user/iot-frontend:0.3.1-57
+    importPolicy: {}
+    referencePolicy:
+      type: Local
+  - name: 0.3.1-58
+    from:
+      kind: DockerImage
+      name: quay.io/monkey-the-user/iot-frontend:0.3.1-58
     importPolicy: {}
     referencePolicy:
       type: Local
