--- a/config/templates/manuela-openshift-prod/messaging/messaging-is.yaml
+++ b/config/templates/manuela-openshift-prod/messaging/messaging-is.yaml
@@ -4,13 +4,6 @@ metadata:
   name: messaging
 spec:
   tags:
-  - name: 0.3.2-43
-    from:
-      kind: DockerImage
-      name: quay.io/manuela/iot-consumer:0.3.2-43
-    importPolicy: {}
-    referencePolicy:
-      type: Local
   - name: 0.3.2-45
     from:
       kind: DockerImage
@@ -50,6 +43,13 @@ spec:
     from:
       kind: DockerImage
       name: quay.io/monkey-the-user/iot-consumer:0.3.2-51
+    importPolicy: {}
+    referencePolicy:
+      type: Local
+  - name: 0.3.2-53
+    from:
+      kind: DockerImage
+      name: quay.io/monkey-the-user/iot-consumer:0.3.2-53
     importPolicy: {}
     referencePolicy:
       type: Local
